--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,45 @@
+buildscript {
+
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6"
+    }
+}
 
 allprojects {
-    
-    apply plugin: 'maven'
-    apply plugin: 'idea'
 
     group = 'com.chillenious.commons'
-    version = '1.0.0'
+    version = currentVersion
+
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'idea'
+
+    apply plugin: 'com.jfrog.bintray'
+
+    ext.publish = true
+
+    bintray {
+        user = bintray_user
+        key = bintray_api_key
+        configurations = ['archives']
+        dryRun = false // Whether to run this as dry-run, without deploying
+        publish = true //If version should be auto published after an upload
+        pkg {
+            repo = 'maven'
+            name = 'chillenious-commons'
+            desc = 'Little bag of tools for Guice based projects'
+            websiteUrl = 'https://github.com/chillenious/commons'
+            issueTrackerUrl = 'https://github.com/chillenious/commons/issues'
+            vcsUrl = 'https://github.com/chillenious/commons.git'
+            licenses = ['MIT']
+            labels = ['Guice', 'Java', 'jOOQ', 'bibliolabs', 'onespot']
+            publicDownloadNumbers = true
+        }
+    }
 }
 
 subprojects {
@@ -21,19 +55,23 @@ subprojects {
         }
     }
 
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
+    task sourceJar(type: Jar) {
         from sourceSets.main.allSource
+        classifier = 'sources'
+    }
+
+    configurations {
+        archives
     }
 
     artifacts {
-        archives sourcesJar
+        archives sourceJar
     }
 
     repositories {
+        jcenter()
         mavenLocal()
         mavenCentral()
-        jcenter()
         maven { url "http://clojars.org/repo" }
     }
 
@@ -58,7 +96,6 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.1'
 }
 
-// Tell IntelliJ IDEA that the VCS for this project is Git
 idea.project.ipr {
     withXml { provider ->
         provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'Git'
