Last take on the sql script runner 	* the one based on mybatis was pretty flawed as well, and so were many others I tried 	* best one - one that actually works for the cases I tested - is the flydb one; rewrote SqlScriptRunner to use this internally

--- a/db/build.gradle
+++ b/db/build.gradle
@@ -5,4 +5,5 @@ dependencies {
     compile project(':core')
 
     compile group: 'com.zaxxer', name: 'HikariCP', version: '2.2.5'
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '3.1'
 }
