--- a/metrics/build.gradle
+++ b/metrics/build.gradle
@@ -7,4 +7,6 @@ dependencies {
     compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '3.1.0'
     compile group: 'io.dropwizard.metrics', name: 'metrics-graphite', version: '3.1.0'
     compile group: 'io.dropwizard.metrics', name: 'metrics-servlets', version: '3.1.0'
+
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
