--- a/db/build.gradle
+++ b/db/build.gradle
@@ -6,4 +6,7 @@ dependencies {
 
     compile group: 'com.zaxxer', name: 'HikariCP', version: '2.2.5'
     compile group: 'org.flywaydb', name: 'flyway-core', version: '3.1'
+
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'mysql', name: 'mysql-connector-java', version: '5.1.35'
 }
